# nvidia-interview-prep

./: CMakeLists.txt  README.md
playground/cpp/include/interview_playground/: pool_and_atomic.h
playground/cpp/src/: core_demo.cpp
playground/exercises/: hazard_pointer.h  mpmc_ticket_queue.h  seqlock.h  spsc_ring_buffer.h  treiber_stack.h  work_stealing_deque.h
playground/python/: demo.py  iov_descriptor.cpp  nix_playground.cpp  zero_copy_buffer.cpp
